--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
         "statements": 95
       }
     },
-    "collectCoverage": true
+    "collectCoverage": false
   },
   "prettier": {
     "semi": false,
