--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "cz-conventional-changelog": "^2.0.0",
     "greenkeeper-lockfile": "^1.15.1",
     "husky": "^1.0.0",
-    "jest": "^22.0.2",
+    "jest": "23.6.0",
     "lint-staged": "^8.0.5",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.13.7",
