--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
     "typeRoots": [
@@ -22,6 +24,8 @@
     ]
   },
   "include": [
-    "src"
+    "src",
+    ".credentials",
+    "tools"
   ]
 }
