feat(Local DynamoDB instance): Create, stop and view a local DynamoDB instance

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare"
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "start-local-dep-dynamo-db": "docker run -d --name local-dynamo-db -p 8000:8000 amazon/dynamodb-local",
+    "start-local-dep-dynamo-db-ui": "export DYNAMO_ENDPOINT=http://localhost:8000; dynamodb-admin;",
+    "stop-local-dep-dynamo-db": "docker stop local-dynamo-db;"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
