--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@types/aws-sdk": "2.7.0",
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.1",
     "@types/uuid": "^3.4.3",
@@ -113,7 +114,9 @@
     "uuid": "^3.3.2",
     "validate-commit-msg": "^2.12.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aws-sdk": "2.360.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
