--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Yannick Meeus <yannick.meeus@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/YannickMeeus/simple-event-store-ts"
   },
   "license": "MIT",
   "engines": {
