--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
 version: 2
 jobs:
   build:
+    branches:
+      ignore:
+        - gh-pages
+
     docker:
       - image: circleci/node:9.11.1
+
     working_directory: ~/repo
+
     steps:
       - checkout
 
@@ -11,9 +17,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
-
-      - run: npm i
-
+      - run:
+          name: Install dependencies
+          command: npm install
       - save_cache:
           paths:
             - node_modules
