--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "jest": "23.6.0",
     "lint-staged": "^8.0.5",
     "lodash.camelcase": "^4.3.0",
+    "nps": "5.9.3",
+    "nps-utils": "1.7.0",
     "prettier": "^1.13.7",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.0.0-beta.2",
