--- a/package.json
+++ b/package.json
@@ -119,7 +119,9 @@
     "uuid": "^3.3.2",
     "validate-commit-msg": "^2.12.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "event-stream": "4.0.1"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
