--- a/package.json
+++ b/package.json
@@ -26,18 +26,9 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts' -p .",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare"
+    "start": "nps",
+    "test": "nps test",
+    "commit": "git-cz"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -111,7 +102,7 @@
     "semantic-release": "15.12.4",
     "ts-jest": "^23.0.0",
     "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
+    "tslint": "5.11.0",
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^8.0.0",
     "typedoc": "^0.13.0",
