build(husky): Update to new husky configuration

--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "start": "nps",
     "test": "nps test",
     "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "prepush": "npm start prerequisites && npm start build",
-    "commitmsg": "validate-commit-msg"
+    "semantic-release": "semantic-release"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -114,6 +112,8 @@
   "dependencies": {},
   "husky": {
     "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-push": "npm start prerequisites && npm start build",
       "pre-commit": "lint-staged"
     }
   }
