--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
       "git add"
     ]
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
