--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/node": "^12.0.2",
     "@types/uuid": "^3.4.3",
     "colors": "^1.1.2",
-    "commitizen": "^3.0.4",
+    "commitizen": "^3.1.1",
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.1",
     "cz-conventional-changelog": "^2.0.0",
@@ -100,13 +100,13 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.21.0",
-    "semantic-release": "15.13.12",
+    "semantic-release": "^15.13.14",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "5.14.0",
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^8.0.0",
-    "typedoc": "^0.14.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.1.6",
     "uuid": "^3.3.2",
     "validate-commit-msg": "^2.12.2"
