feat(Event-Store): Add `Terminate` as a way of gracefully shutting down
As part of working on the PostgreSQL storage engine, I realised that for most of the engine
implementations, I would need a way to signify that the application itself is shutting down, and a
graceful shutdown is required. This could entail closing connections, draining pools, etc. Basically
perform some good-citizen duties.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
       "tsx",
       "js"
     ],
+    "watchPathIgnorePatterns": [
+      "node_modules"
+    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/test/"
