--- a/package.json
+++ b/package.json
@@ -77,41 +77,42 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/jest": "^24.0.4",
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
-    "@types/uuid": "^3.4.3",
-    "colors": "^1.1.2",
+    "@types/uuid": "^3.4.4",
+    "colors": "^1.3.3",
     "commitizen": "^3.1.1",
-    "coveralls": "^3.0.0",
-    "cz-conventional-changelog": "^2.0.0",
+    "coveralls": "^3.0.3",
+    "cz-conventional-changelog": "^2.1.0",
     "event-stream": "4.0.1",
     "greenkeeper-lockfile": "^1.15.1",
-    "husky": "^2.1.0",
-    "jest": "24.5.0",
-    "lint-staged": "^8.0.5",
+    "husky": "^2.3.0",
+    "jest": "24.8.0",
+    "lint-staged": "^8.1.7",
     "lodash": "4.17.11",
+    "npm-check-updates": "^3.1.9",
     "nps": "5.9.5",
     "nps-utils": "1.7.0",
-    "prettier": "^1.13.7",
+    "prettier": "^1.17.1",
     "prompt": "^1.0.0",
-    "replace-in-file": "^4.0.0",
-    "rimraf": "^2.6.1",
-    "rollup": "^1.10.0",
-    "rollup-plugin-commonjs": "^9.0.0",
+    "replace-in-file": "^4.1.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.12.3",
+    "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.21.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "semantic-release": "^15.13.14",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.2",
-    "tslint": "5.14.0",
-    "tslint-config-prettier": "^1.1.0",
-    "tslint-config-standard": "^8.0.0",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
+    "tslint": "5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.14.2",
-    "typescript": "^3.1.6",
+    "typescript": "^3.4.5",
     "uuid": "^3.3.2",
-    "validate-commit-msg": "^2.12.2"
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {},
   "husky": {
