--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,43 @@
-name: Test, Package and Deploy
+name: Verify (Build & Test), Package and Deploy if applicable
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@master
-    
-    - name: Run a one-line script
-      run: echo Hello, world!
-      
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      - uses: actions/checkout@v1
+
+      - name: Print GitHub Context # Debug step
+        if: true == false
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: Set Node LTS
+        uses: actions/setup-node@master
+        with:
+          version: 10.x
+
+      - name: Install all dependencies
+        run: yarn install --frozen-lockfile --silent --link-duplicates
+
+      - name: Run linter
+        run: yarn start prerequisites.lint
+
+      - name: Run All Tests
+        run: yarn test
+
+      - name: Remove output folder if one exists
+        run: yarn start prerequisites.build
+
+      - name: Transpile and package up the library
+        run: yarn start build
+
+      - name: Publish to Smartly.fury.io NPM registry
+        if: endsWith(github.ref, 'master')
+        run: yarn start publish
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
