--- a/package.json
+++ b/package.json
@@ -79,12 +79,18 @@
     "@types/jest": "26.0.7",
     "@types/node": "14.0.27",
     "@types/uuid": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "colors": "1.4.0",
     "commitizen": "4.1.2",
     "coveralls": "3.1.0",
     "cz-conventional-changelog": "3.2.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-node": "^11.1.0",
     "event-stream": "4.0.1",
-    "greenkeeper-lockfile": "1.15.1",
     "husky": "4.2.5",
     "jest": "26.2.0",
     "lint-staged": "10.2.11",
@@ -105,11 +111,8 @@
     "semantic-release": "17.1.1",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
-    "tslint": "6.1.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-config-standard": "9.0.0",
     "typedoc": "0.17.8",
-    "typescript": "3.9.7",
+    "typescript": "^3.9.7",
     "uuid": "8.3.0",
     "validate-commit-msg": "2.14.0"
   },
