--- a/package.json
+++ b/package.json
@@ -76,43 +76,44 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/jest": "26.0.8",
-    "@types/node": "14.0.27",
-    "@types/uuid": "8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.7.1",
+    "@types/jest": "26.0.10",
+    "@types/node": "14.6.1",
+    "@types/uuid": "8.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "colors": "1.4.0",
-    "commitizen": "4.1.2",
+    "commitizen": "4.2.1",
     "coveralls": "3.1.0",
-    "cz-conventional-changelog": "3.2.0",
-    "eslint": "^7.5.0",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.7.0",
+    "dot-prop": "^4.2.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-jsdoc": "^30.3.0",
     "eslint-plugin-node": "^11.1.0",
     "event-stream": "4.0.1",
     "husky": "4.2.5",
-    "jest": "26.2.2",
-    "lint-staged": "10.2.11",
-    "lodash": "4.17.19",
-    "npm-check-updates": "7.0.2",
+    "jest": "26.4.2",
+    "lint-staged": "10.2.13",
+    "lodash": "4.17.20",
+    "npm-check-updates": "7.1.1",
     "nps": "5.10.0",
     "nps-utils": "1.7.0",
-    "prettier": "2.0.5",
+    "prettier": "2.1.1",
     "prompt": "1.0.0",
     "replace-in-file": "6.1.0",
     "rimraf": "3.0.2",
-    "rollup": "2.23.0",
+    "rollup": "2.26.6",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-sourcemaps": "0.6.2",
-    "rollup-plugin-typescript2": "0.27.1",
+    "rollup-plugin-typescript2": "0.27.2",
     "semantic-release": "17.1.1",
-    "ts-jest": "26.1.4",
-    "ts-node": "8.10.2",
-    "typedoc": "0.17.8",
-    "typescript": "^3.9.7",
+    "ts-jest": "26.3.0",
+    "ts-node": "9.0.0",
+    "typedoc": "0.18.0",
+    "typescript": "^4.0.2",
     "uuid": "8.3.0",
     "validate-commit-msg": "2.14.0"
   },
