--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "semantic-release": "17.1.1",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.0",
     "@types/jest": "26.0.10",
     "@types/node": "14.6.1",
     "@types/uuid": "8.3.0",
@@ -85,8 +88,8 @@
     "commitizen": "4.2.1",
     "coveralls": "3.1.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.7.0",
     "dot-prop": "^4.2.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsdoc": "^30.3.0",
@@ -109,7 +112,6 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-sourcemaps": "0.6.2",
     "rollup-plugin-typescript2": "0.27.2",
-    "semantic-release": "17.1.1",
     "ts-jest": "26.3.0",
     "ts-node": "9.0.0",
     "typedoc": "0.18.0",
