--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@make-stuff-work/event-sauced",
-  "version": "2.0.0",
+  "name": "@silly-goose-software/event-sauced-ts",
+  "version": "0.0.0-development",
   "description": "",
   "keywords": [
     "Event Store",
