--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,5 @@ jobs:
         run: npm start publish
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
