--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "semantic-release": "^17.1.2",
+    "@jedmao/semantic-release-npm-github-config": "^1.0.9",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@types/jest": "26.0.10",
@@ -114,6 +114,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-sourcemaps": "0.6.2",
     "rollup-plugin-typescript2": "0.27.2",
+    "semantic-release": "^17.1.2",
     "ts-jest": "26.3.0",
     "ts-node": "9.0.0",
     "typedoc": "0.18.0",
