--- a/package.json
+++ b/package.json
@@ -120,10 +120,10 @@
     "typedoc": "0.18.0",
     "typescript": "^4.0.2",
     "uuid": "8.3.0",
-    "validate-commit-msg": "2.14.0"
+    "validate-commit-msg": "2.14.0",
+    "semantic-release-cli": "^5.4.0"
   },
   "dependencies": {
-    "semantic-release-cli": "^5.4.0"
   },
   "husky": {
     "hooks": {
